Fix minor issues in readme and removed some warnings